Network Monitor failes to show the information if browser.opaqueResponseBlocking == true
Categories
(Core :: DOM: Networking, defect)
Tracking
()
People
(Reporter: 6k64x4ma, Assigned: sefeng211)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/118.0
Steps to reproduce:
- Make sure browser.opaqueResponseBlocking == true.
- Open the Network Monitor.
- Load the attached file.
Actual results:
- The image is loaded successfully, but the Network Monitor doesn't show the information about the image request.
- The browser console says:
NS_ERROR_INVALID_CONTENT_ENCODING: Component returned failure code: 0x804b001b (NS_ERROR_INVALID_CONTENT_ENCODING) [nsIStreamListener.onDataAvailable]
onInputStreamReady resource://devtools/shared/network-observer/NetworkResponseListener.sys.mjs:583
- If browser.opaqueResponseBlocking == false, Network Monitor shows the information.
Expected results:
- Network Monitor should show the information.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=18f23fa5877125926953f6d53a9e2c881d0b9be2&tochange=042e5a858d1140d21a2b9542f5b5a811e5554bc2
Comment 2•2 years ago
|
||
:sefeng, since you are the author of the regressor, bug 1797983, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 3•2 years ago
|
||
| Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 4•2 years ago
|
||
Set release status flags based on info from the regressing bug 1797983
Comment 5•2 years ago
|
||
Set release status flags based on info from the regressing bug 1797983
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 7•2 years ago
|
||
| bugherder | ||
Comment 8•2 years ago
|
||
The patch landed in nightly and beta is affected.
:sefeng, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox119towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Reproducible on a 2023-10-01 Nightly build on Windows 10.
Verified as fixed on Firefox 120.0b3 and Nightly 121.0a1 on Windows 10, macOS 12, Ubuntu 22.
Description
•