Bug 1852870 - Make devtools stop decompress decompressed content r=farre,ochameau,necko-reviewers,devtools-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D188499